<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_sign_in">Sign in to Get Started</string>
    <string name="title_complete_registration">Complete Registration</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_submit">Submit</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="toast_welcome">Welcome! You have successfully signed in</string>
    <string name="toast_complete_registration">Fill in other data to complete registration</string>
    <string name="toast_sign_in_failed">Sign in failed! Check the username and/or password!</string>
    <string name="toast_registration_failed">Registration failed! Unknown error!</string>
</resources>